@@ -1,3 +1,6 @@
+Version 2009122001
++ Removed Kwalitee tests
+
 Version 2009111901
 + Don't require Test::NoWarnings.
 
